--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 APP_NAME=Lumen
 APP_ENV=local
-APP_KEY=
+APP_KEY=4KQGyXYLtDYm6fG0VaC7H7AHtNGrEdxf
 APP_DEBUG=true
 APP_URL=http://localhost
-APP_TIMEZONE=UTC
+APP_TIMEZONE=Asia/Jakarta
 
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
@@ -11,9 +11,9 @@ LOG_SLACK_WEBHOOK_URL=
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_DATABASE=komodo_new
+DB_DATABASE=postgres
 DB_USERNAME=postgres
-DB_PASSWORD=123
+DB_PASSWORD=1610
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
