--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.2",
+        "darkaonline/swagger-lume": "^6.0",
         "firebase/php-jwt": "^5.0",
         "illuminate/auth": "^6.13",
         "illuminate/contracts": "^6.13",
