add jwt and middleware

--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,9 @@
         "laravel/lumen-framework": "^6.0",
         "lcobucci/jwt": "^3.3",
         "moontoast/math": "^1.2",
-        "nesbot/carbon": "^2.29",
+        "nesbot/carbon": "^2.30",
         "ramsey/uuid": "^3.9",
-        "tymon/jwt-auth": "dev-develop"
+        "tymon/jwt-auth": "dev-develop#f72b8eb as 1.0.0-rc.3.2"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
